# CMakeList.txt : CMake project for ctci-array-left-rotation, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ctci-array-left-rotation")

# Add source to this project's executable.
add_executable (ctci-array-left-rotation "ctci-array-left-rotation.cpp")

# TODO: Add tests and install targets if needed.
